client/styles.css
.gameInfo {
  width: 388px;
  height: 250px;
  background-color: #F3F3F3;
  margin-top: 20px;
}

.infoColOne, .infoColTwo {
  background-color: #FFFFFF; 
  width: 170px;
  height: 150px; 
  margin: 10px;
  float: left;
}

.chatBox {
  width: 388px;
  height: 250px;
  background-color: #F3F3F3;
  margin: 20px auto 0px auto;
}

.chatHist {
  background-color: #FFFFFF; 
  width: 360px;
  height: 125px; 
  margin: 10px;
  overflow: auto;
}

.chatInput {
  margin-left: 10px;  
}

.textArea {
  width: 290px;
  overflow: auto;
  resize: none;  
}

.submitChat {
  float: right;
  margin-right: 20px;  
}

.chatWords {
  margin-left: 10px;  
}

.chatWord {
  margin-right: 5px;
}

.card {
  width: 48px;
  height: 48px;
}

.logo {
  margin: 40px auto;
  display: block;
}

.login {
  float: left;
  clear: both;
  width: 300px;
}

.avatar {
  height: 65px;
  display: inline;
  margin-right: 20px;
  margin-left: 0px;
}

.username {
  display: inline;
}

.yourmove{
  font-family: 'Press Start 2P', cursive;
}

.newGame{
  margin-top: 25px;
  margin-left: 33px;
}

.logo{
  margin-top: 200px;
}

.leftMargin{
  padding-left: 80px;
}

.floatRight{
  float: right;
}

.p1{
  padding-left: 220px;
}

